Fix overlap of "example" label and bikeshed's self-link

--- a/standard.css
+++ b/standard.css
@@ -140,6 +140,10 @@ dd > .note:first-child { margin-bottom: 0; }
 .example::before { font-style: normal; content: 'Example'; background: #222222; color: #EEEEEE; padding: 0.15em 0.25em; font: 1em Helvetica Neue, sans-serif, Droid Sans Fallback; position: absolute; top: 0.2em; left: -2.25em; transform: rotate(-5deg); }
 td > .example:only-child { margin: 0 0 0 0.1em; padding: 0; }
 td > .example:only-child::before { display: none; }
+/* Nudge bikeshed's self-link */
+@media (min-width: 768px) {
+  .example > a.self-link { left:-5em; }
+}
 
 @media (max-width: 767px) {
   dl.domintro, .note, .warning, .example { margin-top: 1.25em; margin-left: 0; padding: 1.5em 0.5em 0.5em 1.5em; }
